--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "minin--website-builder-",
+  "name": "javascript-constructor",
   "version": "1.0.0",
-  "description": "quick course where javascript is clean we make a website builder (september 2020)",
+  "description": "pure javascript site constructor",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -15,15 +15,13 @@
     "js",
     "javascript"
   ],
-  "author": "Gumerov Marat gumerovn74@gmail",
+   "author": "Gumerov Marat gumerovn74@gmail",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Gumerov-Marat/minin--website-builder-/issues"
-  },
-  "homepage": "https://github.com/Gumerov-Marat/minin--website-builder-#readme",
   "devDependencies": {
-    "html-webpack-plugin": "^4.4.1",
-    "webpack": "^4.44.1",
+    "css-loader": "^3.6.0",
+    "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
